New APP for account, search
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -42,7 +42,7 @@
                     </tr>
                     <tr>
                         <td colspan="4">
-                            <a href="tag/" class="btnB bBtn">继续购物</a>
+                            <a href="/tag/" class="btnB bBtn">继续购物</a>
                         </td>
                         <td align="right" colspan="2"><a href="consignee/" class="btnB bBtn">结算</a></td>
                     </tr>
