--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -14,15 +14,15 @@
                         <li class="like">喜欢<span id="count_like_276268754">0</span></li>
                     </ul>
                     <div class="tags">
-                        <a href="tag/淡奶油/" class="tags_febe25">淡奶油</a>
-                        <a href="tag/可可粉/" class="tags_f98701">可可粉</a>
-                        <a href="tag/巧克力/" class="tags_febe25">巧克力</a>
-                        <a href="tag/比利时/" class="tags_de13b5">比利时</a>
-                        <a href="tag/香浓/" class="tags_a7cf50">香浓</a>
-                        <a href="tag/Chocolate/" class="tags_5067c8">Chocolate</a>
-                        <a href="tag/法国/" class="tags_f98701">法国</a>
-                        <a href="tag/cake/" class="tags_f98701">cake</a>
-                        <a href="tag/truffle/" class="tags_a7cf50">truffle</a>
+                        <a href="/tag/淡奶油/" class="tags_febe25">淡奶油</a>
+                        <a href="/tag/可可粉/" class="tags_f98701">可可粉</a>
+                        <a href="/tag/巧克力/" class="tags_febe25">巧克力</a>
+                        <a href="/tag/比利时/" class="tags_de13b5">比利时</a>
+                        <a href="/tag/香浓/" class="tags_a7cf50">香浓</a>
+                        <a href="/tag/Chocolate/" class="tags_5067c8">Chocolate</a>
+                        <a href="/tag/法国/" class="tags_f98701">法国</a>
+                        <a href="/tag/cake/" class="tags_f98701">cake</a>
+                        <a href="/tag/truffle/" class="tags_a7cf50">truffle</a>
                     </div>
                     <div class="vote">
                         <a class="btnLike" href="account/logon?ReturnUrl=http%3a%2f%2fwww.31kecake.com%2fsylsy%2fphotos%2fdate-2012-8%3fpid%3d276268754">喜欢</a>
@@ -41,10 +41,10 @@
                         <li class="like">喜欢<span id="count_like_45689948">20</span></li>
                     </ul>
                     <div class="tags">
-                        <a href="tag/黑纯巧克力/" class="tags_de13b5">黑纯巧克力</a>
-                        <a href="tag/厚重/" class="tags_ba0101">厚重</a>
-                        <a href="tag/0－5℃保藏12小时/" class="tags_5067c8">0－5℃保藏12小时</a>
-                        <a href="tag/微苦/" class="tags_a7cf50">微苦</a>
+                        <a href="/tag/黑纯巧克力/" class="tags_de13b5">黑纯巧克力</a>
+                        <a href="/tag/厚重/" class="tags_ba0101">厚重</a>
+                        <a href="/tag/0－5℃保藏12小时/" class="tags_5067c8">0－5℃保藏12小时</a>
+                        <a href="/tag/微苦/" class="tags_a7cf50">微苦</a>
                     </div>
                     <div class="vote">
                         <a class="btnLike" href="account/logon?ReturnUrl=http%3a%2f%2fwww.31kecake.com%2fsylsy%2fphotos%2fdate-2012-8%3fpid%3d276268754">喜欢</a>
@@ -63,16 +63,16 @@
                         <li class="like">喜欢<span id="count_like_276268754">0</span></li>
                     </ul>
                     <div class="tags">
-                        <a href="tag/淡奶油/" class="tags_febe25">淡奶油</a>
-                        <a href="tag/可可粉/" class="tags_f98701">可可粉</a>
-                        <a href="tag/巧克力/" class="tags_febe25">巧克力</a>
-                        <a href="tag/比利时/" class="tags_de13b5">比利时</a>
-                        <a href="tag/香浓/" class="tags_a7cf50">香浓</a>
-                        <a href="tag/Chocolate/" class="tags_5067c8">Chocolate</a>
-                        <a href="tag/法国/" class="tags_f98701">法国</a>
-                        <a href="tag/cake/" class="tags_f98701">cake</a>
-                        <a href="tag/truffle/" class="tags_a7cf50">truffle</a>
-                        <a href="tag/10℃最佳食用/" class="tags_a7cf50">10℃最佳食用</a>
+                        <a href="/tag/淡奶油/" class="tags_febe25">淡奶油</a>
+                        <a href="/tag/可可粉/" class="tags_f98701">可可粉</a>
+                        <a href="/tag/巧克力/" class="tags_febe25">巧克力</a>
+                        <a href="/tag/比利时/" class="tags_de13b5">比利时</a>
+                        <a href="/tag/香浓/" class="tags_a7cf50">香浓</a>
+                        <a href="/tag/Chocolate/" class="tags_5067c8">Chocolate</a>
+                        <a href="/tag/法国/" class="tags_f98701">法国</a>
+                        <a href="/tag/cake/" class="tags_f98701">cake</a>
+                        <a href="/tag/truffle/" class="tags_a7cf50">truffle</a>
+                        <a href="/tag/10℃最佳食用/" class="tags_a7cf50">10℃最佳食用</a>
                     </div>
                     <div class="vote">
                         <a class="btnLike" href="account/logon?ReturnUrl=http%3a%2f%2fwww.31kecake.com%2fsylsy%2fphotos%2fdate-2012-8%3fpid%3d276268754">喜欢</a>
@@ -83,7 +83,7 @@
         </ul>
         <div id="showMore" class="showMore">
             <a href="" title="31客" class="fl" ></a>
-            <center><a class="btnB bBtn" href="javascript:void(0)" onclick="getPhotoViewMoreClick();return false;">继续浏览</a></center>
+            <center><a class="btnB bBtn" href="javascript:void(0)" onclick="getPhotoViewMoreClick();return false;">显示更多</a></center>
             <a href="" title="31客" class="fr" ></a>
         </div>
         <div id="container_bottom_recommend" class="list_album_content userVouch" >
