--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -35,24 +35,25 @@
                     </form>
                 </li>
                 <li class="messageBox">
-                    <a id="lnkTopMessage" href="/account/order" onclick="javascript:return false;" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">2</span></a>
+                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">2</span></a>
                     <div id="pnlTopMessage" class="messagePop" style="display:none;">
                         <h3>新消息</h3>
                         <ul>
-                            <li><a href="/account/order">新订单（ 1 ）</a></li>
-                            <li><a href="/account/messages">新留言（ 0 ）</a></li>
+                            <li><a href="/account/order/">新订单（ 1 ）</a></li>
+                            <li><a href="/account/messages/">新留言（ 0 ）</a></li>
                         </ul>
                         <a class="confirm" href="javascript:void(0)" onclick="clearMessageData();return false;">我知道了</a>
                     </div>
                 </li>
                 <li><a href="/cart/">购物车</a></li>
                 <li class="messageBox">
-                    <a id="lnkTopSetting" href="javascript:void(0)" class="pic">设置<b></b></a>
+                    <a id="lnkTopSetting" class="pic">设置<b></b></a>
                     <div id="pnlTopProfile" class="messagePop" style="display: none;">
                         <h3>leiddx</h3>
                         <div class="editBox">
                             <ul>
                                 <li class="email"><em>leiddx@vip.qq.com</em></li>
+                                <li><a href="/account/order/">我的订单</a></li>
                                 <li><a href="/account/settings/">个人设置</a></li>
                                 <li><a href="/account/changepwd/">修改密码</a></li>
                             </ul>
@@ -64,6 +65,7 @@
         </div>
     </div>
 {% block scrollBox %}{% endblock %}
+{% block subMenu %}
     <div id="scrollTop">
         <ul class="intro">
             <li><p><span class="txt">第一次吃到杏仁咖啡，叹为观止。</span><br><span class="txtFrom">—— 韦夏（当代生活报记者）</span></p></li>
@@ -77,6 +79,7 @@
             <li><a href="/tag/pie/">水果派</a></li>
         </ul>
     </div>
+{% endblock %}
     <div id="content" class="clearfix">
 {% block content %}{% endblock %}
     </div>
