--- a/static/css/shop/base.css
+++ b/static/css/shop/base.css
@@ -247,7 +247,7 @@ background:-ms-linear-gradient(top, #980000 0%,#8a0000 45%,#8a0000 46%,#7e0000 1
 .toolBar .newMessage:hover{padding-top:4px;height:28px;line-height:28px;}
 .toolBar .newMessage span{color:white;background:#9A3838;border-radius:2px;text-shadow:0px 1px white;padding:0 5px;display:block;width:14px;height:24px;text-align:center;line-height:24px}
 
-.toolBar .on,.toolBar .on:hover{background:#FFF;border-radius:2px 2px 0 0;color:#474531;display:block;}
+.toolBar .on,.toolBar .on:hover{background:#FFF;border-radius:2px 2px 0 0;color:#474531;display:block;box-shadow: 0 2px 4px rgba(30, 25, 25, 0.5);}
 .toolBar .on span{background:#676767;border-radius:2px;padding:0 5px;line-height:24px}
 
 .toolBar .messagePop{position:absolute;z-index:999;width:180px;background:#FFF;box-shadow:0 2px 4px rgba(30, 25, 25, 0.5);overflow:hidden;right:0;top:32px;}
@@ -277,7 +277,7 @@ background:-ms-linear-gradient(top, #980000 0%,#8a0000 45%,#8a0000 46%,#7e0000 1
 /*header:End*/
 
 /*scrollTop:Start*/
-#scrollTop{width:928px;height:40px;margin:0px auto;padding:10px 15px 10px 15px;border:solid #E5E5E5;border-width:0 1px 1px 1px;position:relative;box-shadow:0px 1px #e9e9e9;background:#FFF;z-index:997;}
+#scrollTop{width:928px;height:40px;margin:0px auto;padding:10px 15px 10px 15px;border:solid #E5E5E5;border-width:0 1px 1px 1px;position:relative;box-shadow:0px 1px #E9E9E9;background:#FFF;z-index:997;}
 
 .intro{width:490px;height:100%;float:left;padding:0px;overflow:hidden;}
 .intro li{display:none;}
