--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -8,6 +8,25 @@
                 <form action="/checkout/" method="post" name="checkout" class="checkout">
                     <table width="100%">
                         <tr>
+                            <td align="right">支付方式:</td>
+                            <td colspan="3">
+                                <select name="pid">
+                                    <option value="1">支付宝</option>
+                                    <option value="2" selected>货到付款</option>
+                                </select>
+                                (必填)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="right">配送方式:</td>
+                            <td colspan="3">
+                                <select name="sid">
+                                    <option value="1" selected>送货上门</option>
+                                </select>
+                                (必填)
+                            </td>
+                        </tr>
+                        <tr>
                             <td align="right">收货人姓名:</td>
                             <td align="left"><input name="consignee" type="text" value="韦超" /> (必填)</td>
                         </tr>
@@ -57,74 +76,16 @@
                                 (必填)
                             </td>
                         </tr>
+                        <tr>
+                            <td align="right" valign="top">备注:</td>
+                            <td align="left" width="90%"><textarea name="postscript" cols="100" rows="4" style="border:1px solid #CCC;color: #CCCCCC;">您可以在此填写您是否需要生日牌、祝福语（20字以内）以及关于订单的任何疑问、要求等。如：我不希望你们和收货人联系，我要给收货人一个惊喜。具体的联系我的电话：158xxxxxxxx。</textarea></td>
+                        </tr>
                     </table>
                     <center>
-                        <input type="submit" name="submit" value="配送至这个地址" class="btnB bBtn" />
-                        <input type="button" name="button" value="删除" class="btnB bBtn drop_consignee" />
+                        <input type="submit" name="submit" value="确认" class="btnB bBtn" />
+                        <!-- <input type="button" name="button" value="返回" class="btnB bBtn" /> -->
                     </center>
                     <input type="hidden" name="aid" value="2">
-                </form>
-            </div>
-            <div class="mBottom50">
-                <h3>收货人信息</h3>
-                <p>（请填写详细收货地址及准确的最佳送货时间，以便更快捷将您订购的蛋糕送达！）</p>
-                <form action="/checkout/" method="post" name="checkout" class="checkout">
-                  <table width="100%">
-                        <tr>
-                            <td align="right">收货人姓名:</td>
-                            <td align="left"><input name="consignee" type="text" value="" /> (必填)</td>
-                        </tr>
-                        <tr>
-                            <td align="right">配送区域:</td>
-                            <td colspan="3">
-                                <select name="city" class="city">
-                                    <option value="0">请选择城市</option>
-                                    <option value="1" >南宁</option>
-                                </select>
-                                <select name="block">
-                                    <option value="0">请选择区域</option>
-                                    <option value="2" >邕宁区</option>
-                                    <option value="3" >青秀区</option>
-                                    <option value="4" >兴宁区</option>
-                                    <option value="5" >良庆区</option>
-                                    <option value="6" >西乡塘区</option>
-                                    <option value="7" >江南区</option>
-                                </select>
-                                (必填)
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="right">详细地址:</td>
-                            <td align="left" width="90%"><input name="address" type="text" value="" size="70" /> (必填)</td>
-                        </tr>
-                        <tr>
-                            <td align="right">联系电话:</td>
-                            <td align="left"><input name="tel" type="text" value="" size="40" /> (必填)  ( 请填写多个号码，并用空格隔开。如：134XXXXXXXX 0771XXXXXXX )</td>
-                        </tr>
-                        <tr>
-                            <td align="right">最佳收货时间:</td>
-                            <td align="left">
-                                <input name="best_date" type="text" class="best_date" value="" />
-                                <select name="best_time">
-                                    <option value="10:00 ~ 11:00" >10:00 ~ 11:00</option>
-                                    <option value="11:00 ~ 12:00" >11:00 ~ 12:00</option>
-                                    <option value="12:00 ~ 13:00" >12:00 ~ 13:00</option>
-                                    <option value="13:00 ~ 14:00" >13:00 ~ 14:00</option>
-                                    <option value="14:00 ~ 15:00" >14:00 ~ 15:00</option>
-                                    <option value="15:00 ~ 16:00" >15:00 ~ 16:00</option>
-                                    <option value="16:00 ~ 17:00" >16:00 ~ 17:00</option>
-                                    <option value="17:00 ~ 18:00" >17:00 ~ 18:00</option>
-                                    <option value="18:00 ~ 19:00" >18:00 ~ 19:00</option>
-                                    <option value="19:00 ~ 20:00" >19:00 ~ 20:00</option>
-                                </select>
-                                (必填)
-                          </td>
-                        </tr>
-                    </table>
-                    <center>
-                        <input type="submit" name="submit" value="配送至这个地址" class="btnB bBtn" />
-                    </center>
-                    <input type="hidden" name="aid" value="">
                 </form>
             </div>
         </div>
