最终设计确认.准备进行后台逻辑代码编写.
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/settings.htm
+++ b/account/templates/settings.htm
@@ -24,7 +24,7 @@
                     <label>生日：</label>
                     <p>
                         <span class="" data-valmsg-for="UserName" data-valmsg-replace="true"></span>
-                        <input data-val="true" data-val-remote="“用户名”无效。" data-val-remote-additionalfields="*.UserName" data-val-remote-url="/Account/SetNameValidation" data-val-required="请输入新的用户名" id="UserName" name="UserName" type="text" value="leiddx" />
+                        <input data-val="true" data-val-remote="“用户名”无效。" data-val-remote-additionalfields="*.UserName" data-val-remote-url="/Account/SetNameValidation" data-val-required="请输入新的用户名" id="UserName" name="UserName" type="text" value="8.05" />
                     </p>
                 </div>
                 <div class="box">
