--- a/checkout/templates/checkout.htm
+++ b/checkout/templates/checkout.htm
@@ -29,18 +29,28 @@
                     <th>小计</th>
                 </tr>
                 <tr align="center" class="bLine">
-                    <td>生日套装(生日牌/冷烟花/蜡烛)</td>
-                    <td>套</td>
-                    <td>￥3.00 元<font color="red">( 折 )</font></td>
-                    <td>1</td>
-                    <td>￥3.00 元</td>
-                </tr>
-                <tr align="center" class="bLine">
                     <td>香浓巧克力</td>
                     <td>2.5磅：约18×18(cm)</td>
                     <td>￥284.00 元<font color="red">( 折 )</font></td>
                     <td>1</td>
                     <td>￥284.00 元</td>
+                </tr>
+            </table>
+            <h3>赠送</h3>
+            <table width="100%" class="mBottom10">
+                <tr>
+                    <th>商品名称</th>
+                    <th>规格</th>
+                    <th>价格</th>
+                    <th>数量</th>
+                    <th>小计</th>
+                </tr>
+                <tr align="center" class="bLine">
+                    <td>生日套装(生日牌/冷烟花/蜡烛)</td>
+                    <td>套</td>
+                    <td>￥3.00 元</td>
+                    <td>1</td>
+                    <td>￥3.00 元</td>
                 </tr>
                 <tr>
                     <td colspan="5" align="right"><span class="fBold font18">总计: ￥287.00 元和0 K金</span></td>
