--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -2,12 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    {% block title %}{% endblock %}
-    {% block keywords %}{% endblock %}
-    {% block description %}{% endblock %}
+    <title>{% block title %}{% endblock %} 31客——源自欧洲经典口味！</title>
+    <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
+    <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="stylesheet" href="/css/shop/base.css" />
     <link rel="stylesheet" href="/css/shop/style.css" />
-    <link rel="stylesheet" href="/css/shop/popup.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/shop/airbum.common.js"></script>
