--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -1,5 +1,9 @@
 {% extends "shop.base.htm" %}
+
+{% block title %}香浓巧克力{% endblock %}
+
 {% block js %}
+    <link rel="stylesheet" href="/css/shop/popup.css" />
     <script type="text/javascript" src="/js/shop/popup.js"></script>
     <script type="text/javascript" src="/js/shop/airbum.tag.js"></script>
 {% endblock %}
