--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -46,7 +46,8 @@
                     </div>
                 </li>
                 <li><a href="/cart/">购物车</a></li>
-                <li class="messageBox">
+                <li><a href="/account/login/">登录</a></li>
+<!--                 <li class="messageBox">
                     <a id="lnkTopSetting" class="pic">设置<b></b></a>
                     <div id="pnlTopProfile" class="messagePop" style="display: none;">
                         <h3>leiddx</h3>
@@ -60,7 +61,7 @@
                         </div>
                         <a class="confirm" href="/account/logoff/">退出登录</a>
                    </div>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
