--- a/static/css/shop/base.css
+++ b/static/css/shop/base.css
@@ -297,11 +297,11 @@ background:-ms-linear-gradient(top, #980000 0%,#8a0000 45%,#8a0000 46%,#7e0000 1
 /*scrollTop:End*/
 
 /*content:Start*/
-#content{width:960px;height:100%;padding:0 0 60px 0;margin:30px auto;min-height:400px;_height:400px;}
+#content{width:960px;padding:30px 0 120px 0;margin:0 auto;min-height:400px;_height:200px;}
 /*content:End*/
 
 /*footer:Start*/
-#footer{width:100%;min-width:960px;background:#FFF;}
+#footer{width:100%;min-width:960px;background:#FFF;position: relative;}
 .other{padding:5px 0;background:#D9D4D4;border-top:1px solid #CFCACA;}
 .other ul{width:960px;margin:0 auto;}
 .other ul li{display:inline}
