测试通用视图
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -4,7 +4,7 @@
 {% block content %}
         <div class="loginTitle">登录</div>
         <div class="loginBox">
-            <form action="/account/login" method="post">{% csrf_token %}
+            <form action="" method="post">{% csrf_token %}
                 <div class="formBar">
                      <span class="" data-valmsg-for="UserName" data-valmsg-replace="true"></span>
                      <label for="UserName">帐号</label>
