测试模板全局变量
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -1,6 +1,6 @@
 {% extends "shop.base.htm" %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}{{ common.title }}{% endblock %}
 
 {% block scrollBox %}
     <div class="scrollBox">
