--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>{% block title %}{% endblock %} 31客——源自欧洲经典口味！</title>
+    <title>{% block title %}{{ common.title}}{% endblock %} 31客——源自欧洲经典口味！</title>
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     <link rel="stylesheet" href="/css/shop/base.css" />
@@ -35,12 +35,12 @@
                     </form>
                 </li>
                 <li class="messageBox">
-                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">2</span></a>
+                    <a id="lnkTopMessage" href="/account/order" class="newMessage" title="新消息"><span id="spanTopMessage" title="新消息">{{common.user.messageCount}}</span></a>
                     <div id="pnlTopMessage" class="messagePop" style="display:none;">
                         <h3>新消息</h3>
                         <ul>
-                            <li><a href="/account/order/">新订单（ 1 ）</a></li>
-                            <li><a href="/account/messages/">新留言（ 0 ）</a></li>
+                            <li><a href="/account/order/">新订单（ {{common.user.newOrder}} ）</a></li>
+                            <li><a href="/account/messages/">新留言（ {{common.user.newMessage}} ）</a></li>
                         </ul>
                         <a class="confirm" href="javascript:void(0)" onclick="clearMessageData();return false;">我知道了</a>
                     </div>
@@ -64,7 +64,7 @@
                 </li>
 {% else %}
                 <li class="messageBox">
-                    <a id="lnkTopLogin" class="login">登录</a>
+                    <a href="/account/login/" id="lnkTopLogin" class="login">登录</a>
                     <div id="loginMessage" class="messagePop" style="display: none;">
                         <div class="topLoginBox">
                             <form action="/account/login/" method="post">{% csrf_token %}
