--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -1,6 +1,6 @@
 {% extends "shop.base.htm" %}
 
-{% block title %}{{ common.title }}{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block scrollBox %}
     <div class="scrollBox">
