--- a/static/css/shop/style.css
+++ b/static/css/shop/style.css
@@ -30,11 +30,10 @@
 .pinStream .b3{width:379px;height:379px}
 .pinStream .b2 img{margin-top:-106px}
 .pinStream .boxInner{float:left;width:382px;height:570px}
-.floatInfo{ color:#FFFFFF;position:relative;display:block;width:100%;position:absolute;left:0;bottom:-50px;height:50px;background:#000000;opacity:0.8;filter:alpha(opacity=80);-moz-opacity:0.8;}
-.floatInfo .price{position:absolute;left:8px;bottom:5px;font-size:20px;-webkit-text-size-adjust:none;}
-.floatInfo .username{position:absolute;left:8px;bottom:25px;}
+.floatInfo{color:#FFFFFF;position:relative;display:block;width:100%;position:absolute;left:0;bottom:-50px;height:50px;background:#000000;opacity:0.8;filter:alpha(opacity=80);-moz-opacity:0.8;}
+.floatInfo .price{position:absolute;left:8px;bottom:20px;font-size:20px;-webkit-text-size-adjust:none;}
+.floatInfo .name{position:absolute;left:15px;bottom:5px;width:85%;white-space:nowrap;overflow:hidden;}
 .floatInfo .like_icon{ width:30px;overflow:hidden;position:absolute;right:8px;bottom:25px;}
-.floatInfo .chat_icon{ width:30px;overflow:hidden;position:absolute;right:8px;bottom:3px;}
 
 /*pinStream:End*/
 
